--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,11 @@ dependencies = [
     "langgraph",
     "databricks-dlt",
     "mlflow==3.1.1",
+    "lightgbm>=4.5.0",
     "pydantic==2.8.2",
     "pandas>=2.3.0",
     "requests>=2.32.4",
+    "tsfresh>=0.20.0"
 ]
 
 [dependency-groups]
