--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "pydantic==2.8.2",
     "pandas>=2.3.0",
     "requests>=2.32.4",
-    "tsfresh>=0.20.0"
+    "tsfresh>=0.20.0",
+    "scikit-learn>=1.5.0"
 ]
 
 [dependency-groups]
