--- a/resources/process_job.yml
+++ b/resources/process_job.yml
@@ -6,7 +6,7 @@ resources:
 
       parameters:
         - name: config_path
-          default: "config.yaml"
+          default: "../config.yaml"
 
       tasks:
         - task_key: process
