--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,17 +8,17 @@ authors = [
 requires-python = ">= 3.12.0"
 
 dependencies = [
+    "databricks-agents",
     "databricks-connect==16.3.2",
-    "databricks-langchain",
+    "databricks-langchain==0.6.0",
     "langgraph",
-    "databricks-dlt",
-    "mlflow==3.1.1",
     "lightgbm>=4.5.0",
-    "pydantic==2.8.2",
+    "mlflow==3.1.1",
+    "pydantic>=2.1.0",
     "pandas>=2.3.0",
     "requests>=2.32.4",
-    "tsfresh>=0.20.0",
-    "scikit-learn>=1.5.0"
+    "scikit-learn>=1.5.0",
+    "tsfresh>=0.20.0"
 ]
 
 [dependency-groups]
