--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "hydrate"
+name = "well_agent"
 version = "0.0.2"
 authors = [
     { name = "Scott McKean", email = "scott.mckean@databricks.com" },
